--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
     android:background="@color/colorPrimary"
     android:minHeight="?attr/actionBarSize"
     android:elevation="2dp">
