--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/action_card_add"
-        android:title="@string/menu_card_add_label"
+    <item android:id="@+id/action_mpeso_agencies"
+        android:title="@string/action_mpeso_agencies"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_add_white" />
-
+        app:showAsAction="never" />
 </menu>
