--- a/app/src/main/res/layout/activity_districts.xml
+++ b/app/src/main/res/layout/activity_districts.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.socialimprover.saldotuc.DistrictsActivity">
+    tools:context="com.socialimprover.saldotuc.ui.DistrictsActivity">
 
     <include
         android:id="@+id/toolbar"
