--- a/app/src/main/res/menu/card_add.xml
+++ b/app/src/main/res/menu/card_add.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.socialimprover.saldotuc.CardAddActivity" >
+    tools:context="com.socialimprover.saldotuc.ui.CardAddActivity" >
     <item android:id="@+id/action_save"
         android:title="@string/menu_save_label"
         android:orderInCategory="100"
