--- a/app/src/main/res/menu/card_update.xml
+++ b/app/src/main/res/menu/card_update.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.socialimprover.saldotuc.CardUpdateActivity" >
+    tools:context="com.socialimprover.saldotuc.ui.CardUpdateActivity" >
     <item android:id="@+id/action_update"
         android:title="@string/menu_update_label"
         android:orderInCategory="100"
