--- a/app/src/main/res/layout/activity_agency.xml
+++ b/app/src/main/res/layout/activity_agency.xml
@@ -2,21 +2,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.socialimprover.saldotuc.ui.AgenciesActivity">
+    tools:context="com.socialimprover.saldotuc.ui.AgencyActivity">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/nameText"
+        android:layout_height="112dp"
         android:layout_width="match_parent"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:divider="#dddddd"
-        android:dividerHeight="1dp"
-        android:listSelector="@color/card_item"
-        android:layout_below="@+id/toolbar"/>
+        android:gravity="center_vertical|start"
+        android:background="@android:color/white"
+        android:paddingLeft="@dimen/activity_horizontal_padding"
+        android:paddingRight="@dimen/activity_horizontal_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#212121" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:layout_below="@id/nameText"
+        android:background="#dddddd" />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_below="@id/divider"
+        android:orientation="vertical"
+        android:background="@android:color/transparent"
+        android:paddingLeft="@dimen/activity_horizontal_padding"
+        android:paddingRight="@dimen/activity_horizontal_padding">
+        <TextView
+            android:id="@+id/neighborhoodLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Barrio"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textColor="#212121" />
+
+        <TextView
+            android:id="@+id/neighborhoodText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="2sp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#7e8894" />
+
+        <TextView
+            android:id="@+id/addressLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Dirección"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textColor="#212121" />
+
+        <TextView
+            android:id="@+id/addressText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="2sp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#7e8894" />
+    </LinearLayout>
 
 </RelativeLayout>
