--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_padding">16dp</dimen>
+    <dimen name="activity_vertical_padding">16dp</dimen>
     <dimen name="cards_list_horizontal_margin">16dp</dimen>
     <dimen name="cards_list_vertical_margin">8dp</dimen>
     <dimen name="cards_list_horizontal_padding">16dp</dimen>
