--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,33 +58,42 @@
     <ImageButton
         android:id="@+id/fab_action_card_add"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
-        android:layout_gravity="bottom|end"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_add_white"
         android:elevation="4dp"
         android:contentDescription="@string/card_add_label"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:layout_above="@+id/snackbar"/>
 
     <com.shamanland.fab.FloatingActionButton
         xmlns:app="http://schemas.android.com/apk/res/com.socialimprover.saldotuc"
         android:id="@+id/fab"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_add_white"
         android:visibility="gone"
-        app:floatingActionButtonColor="@color/colorPrimaryDark"/>
+        app:floatingActionButtonColor="@color/colorPrimaryDark"
+        android:layout_above="@+id/snackbar"/>
+
+    <TextView
+        android:id="@+id/snackbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="#ff333333"
+        android:gravity="center|start"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-48dp"
+        android:paddingBottom="2dp"
+        android:paddingLeft="@dimen/activity_horizontal_padding"
+        android:paddingRight="@dimen/activity_horizontal_padding"
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
